Fix: added signup button. Altered styling so buttons aren't covered by phone icons at top of screen

--- a/InnerLog/src/styles/globals.css
+++ b/InnerLog/src/styles/globals.css
@@ -154,3 +154,12 @@
 input[type="date"]::-webkit-calendar-picker-indicator {
   cursor: pointer;
 }
+
+body {
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
+}
+
+.header {
+  padding-top: calc(16px + env(safe-area-inset-top));
+}
